[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/3d/Crate/Crate.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/miscs/SelectArea/SelectArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/miscs/Inventory/Inventory.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/objects/Floater/Floater.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/games/TestInventory/Crate.gd" type="Script" id=7]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]

[node name="Crate" type="RigidBody" groups=[
"has_inventory",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.4481, 0, 0 )
gravity_scale = 0.0
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="crate" parent="." instance=ExtResource( 1 )]

[node name="Floater" parent="." instance=ExtResource( 5 )]
water_drag = 1.0
water_angular_drag = 1.0
depth_before_submerged = 0.5
displacement_amount = 1.5

[node name="SelectArea" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape" parent="SelectArea" index="0"]
shape = SubResource( 2 )

[node name="Inventory" parent="." instance=ExtResource( 4 )]

[node name="SinkTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true
autostart = true

[node name="ClearTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="SinkTween" type="Tween" parent="."]

[connection signal="inventory_updated" from="Inventory" to="." method="_on_Inventory_inventory_updated"]
[connection signal="timeout" from="SinkTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="timeout" from="ClearTimer" to="." method="_on_ClearTimer_timeout"]

[editable path="SelectArea"]
